--- a/MEF-ENSTP-main/index.html
+++ b/MEF-ENSTP-main/index.html
@@ -1136,7 +1136,7 @@
                                 <button onclick="openPDF('td/Solution_TD_N02_Barres.pdf', 'Solution TD N°02 - Barres')" class="w-full py-2 rounded-lg border-2 border-enstp-navy text-enstp-navy text-sm font-semibold hover:bg-enstp-navy hover:text-white flex items-center justify-center">
                                     <i class="fas fa-lightbulb mr-2"></i>Solution PDF
                                 </button>
-                                <a href="td/index2.html" target="_blank" class="w-full py-2 rounded-lg bg-enstp-gold text-enstp-navy text-sm font-semibold hover:bg-opacity-90 flex items-center justify-center">
+                                <a href="td/index.html" target="_blank" class="w-full py-2 rounded-lg bg-enstp-gold text-enstp-navy text-sm font-semibold hover:bg-opacity-90 flex items-center justify-center">
                                     <i class="fas fa-globe mr-2"></i>Solution Web
                                 </a>
                             </div>
