--- a/index.html
+++ b/index.html
@@ -2313,8 +2313,18 @@ const mesVideos = {
             duree: '15:30'
         },
         { 
-            id: 'XYZ789GHI012',  // ← Deuxième vidéo
+            id: 'dxtmAOz1DFM',  // ← Deuxième vidéo
             titre: 'Cours MEF - Les ressorts Partie 2', 
+            duree: '20:45'
+        }
+        { 
+            id: 'b2Asq-gbizQ',  // ← Troiséme vidéo
+            titre: 'Cours MEF - Les ressorts Partie 3', 
+            duree: '20:45'
+        }
+         { 
+            id: 'b2Asq-gbizQ&list=PLv_ZsZmTHkvywpxavkXjernMnqnrsqz78&index=2',  // ← quatrieme  vidéo
+            titre: 'Cours MEF - Les ressorts Partie 4', 
             duree: '20:45'
         }
     ],
