--- a/index.html
+++ b/index.html
@@ -2322,8 +2322,23 @@ const mesVideos = {
     ],
     'barres': [
         {
-            id: 'DEF456ABC123',
+            id: 'Ydg-gutheLA',
             titre: 'Cours MEF - Éléments barres',
+            duree: '25:10'
+        }
+         
+    ]
+'barres en treillis': [
+        {
+            id: 'kOdjtriIxY0',
+            titre: 'Cours MEF - Éléments barres en treillis - Partie 1',
+            duree: '25:10'
+        }
+    ]
+    'poutres': [
+        {
+            id: 'TL_Dh8KDVzg',
+            titre: 'Cours MEF - Éléments poutres - Partie 1',
             duree: '25:10'
         }
     ]
